--- a/tedbot-ui/src/app.css
+++ b/tedbot-ui/src/app.css
@@ -1,4 +1,5 @@
 @import "./styles/plugins.css";
+@plugin "@nobie-org/tailwindcss-animate";
 @import "tailwindcss";
 
 @layer base {
@@ -26,7 +27,7 @@
 
 	  --sidebar-background: 0 0% 98%;
       --sidebar-foreground: 240 5.3% 26.1%;
-      --sidebar-primary: 240 5.9% 10%;
+      --sidebar-primary: #a970ff;
       --sidebar-primary-foreground: 0 0% 98%;
       --sidebar-accent: 240 4.8% 95.9%;
       --sidebar-accent-foreground: 240 5.9% 10%;
@@ -56,7 +57,7 @@
 
 	  --sidebar-background: 240 5.9% 10%;
       --sidebar-foreground: 240 4.8% 95.9%;
-      --sidebar-primary: 224.3 76.3% 48%;
+      --sidebar-primary: #a970ff;
       --sidebar-primary-foreground: 0 0% 100%;
       --sidebar-accent: 240 3.7% 15.9%;
       --sidebar-accent-foreground: 240 4.8% 95.9%;
@@ -72,4 +73,53 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@theme {
+	--animate-accordion-down: accordion-down 0.2s ease-out
+	--animate-accordion-up: accordion-up 0.2s ease-out;
+	--animate-collapsible-down: collapsible-down 0.2s ease-in-out;
+	--animate-collapsible-up: collapsible-up 0.2s ease-in-out;
+
+	@keyframes accordion-down {
+		from {
+			height: 0
+		}
+
+		to {
+			height: var(--bits-accordion-content-height)
+		}
+	}
+
+	@keyframes accordion-up {
+		from {
+			height: var(--bits-accordion-content-height)
+		}
+
+		to {
+			height: 0
+		}
+	}
+
+	@keyframes collapsible-down {
+		from {
+			height: 0
+		}
+
+		,
+		to {
+			height: var(--bits-collapsible-content-height)
+		}
+	}
+
+	@keyframes collapsible-up {
+		from {
+			height: var(--bits-collapsible-content-height)
+		}
+
+		to {
+			height: 0
+		}
+	}
+
 }
